made reset button and functionality

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <button class="hidden" id="attackButton">Attack!</button>
 
+<button class="hidden" id="reset">Reset</button>
+
 <div id="winner">
 </div>
 
